--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
-<h1>Background Generator</h1>
+<h1> The Background Generator</h1>
 <input type="color" class="color1" name="color1" value="#0000ff">
 <input type="color" class="color2" name="color2" value="#ff0000">
 <h2> Current CSS Background</h2>
