--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1> The Background Generator</h1>
 <input type="color" class="color1" name="color1" value="#0000ff">
 <input type="color" class="color2" name="color2" value="#ff0000">
-<h2> Current CSS Background</h2>
+<h2> Present CSS Background</h2>
 <h3></h3>
 <script type="text/javascript" src="script.js"></script>
 </body>
